0.1.2

0.1.1

2016-03-13  Brecht Sanders  https://github.com/brechtsanders/

	* added header file with version information
	* additional functions for reading cells (integer, floating point, date/time)
	
2016-03-12  Brecht Sanders  https://github.com/brechtsanders/

	* add support multiline text fields
	* set date/time value to proper display format

2016-03-09  Brecht Sanders  https://github.com/brechtsanders/

	* add support for reading next row without having read all columns
	* additional functions for writing cells (integer, floating point, date/time)
	* added encoding of special XML characters in string data

0.1.0

2016-03-08  Brecht Sanders  https://github.com/brechtsanders/

	* initial release of working version